--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "Samsung SmartTV Packager (No SDK)",
+  "name": "Samsung-SmartTV-Packager",
+  "version":"0.0.1",
   "description": "Helps you package HTML5 Apps for Samsung Smart TV without touching their SDK.",
   "author": "James Pollack <james.b.pollack@gmail.com>",
   "dependencies": {
     "adm-zip": "0.4.3",
     "mv": "0.0.5",
     "string": "1.3.0",
-     "xmlbuilder": "0.4.2"
+    "xmlbuilder": "0.4.2"
   },
   "engine": "node >= 0.8.0"
 }
