--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "Samsung-SmartTV-Packager",
-  "version":"0.0.1",
+  "name": "samsungstv-packager",
+  "version": "0.0.1",
   "description": "Helps you package HTML5 Apps for Samsung Smart TV without touching their SDK.",
-  "author": "James Pollack <james.b.pollack@gmail.com>",
-  "dependencies": {
+  "author": "Raphael Luchini",
+  "dependencies": {},
+  "engine": "node >= 0.8.0",
+  "devDependencies": {
+    "adm-zip": "^0.4.4",
+    "express": "^4.10.0",
+    "fs-extra": "^0.12.0",
     "mv": "0.0.5",
-    "string": "1.3.0",
+    "rimraf": "^2.2.8",
+    "string": "^1.3.0",
     "xmlbuilder": "0.4.2"
-  },
-  "engine": "node >= 0.8.0"
+  }
 }
