--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/raphaelluchini/samsungstv-packager/issues"
   },
   "engine": "node >= 0.8.0",
-  "devDependencies": {
+  "dependencies": {
     "adm-zip": "^0.4.4",
     "express": "^4.10.0",
     "fs-extra": "^0.12.0",
