--- a/package.json
+++ b/package.json
@@ -3,17 +3,8 @@
   "version": "0.0.3",
   "description": "Helps you package HTML5 Apps for Samsung Smart TV without touching their SDK.",
   "author": "Raphael Luchini",
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/raphaelluchini/samsungstv-packager.git"
-  },
-  "bugs": {
-    "url": "https://github.com/raphaelluchini/samsungstv-packager/issues"
-  },
-  "engine": "node >= 0.8.0",
   "dependencies": {
-    "adm-zip": "^0.4.4",
+    "archiver": "^0.12.0",
     "express": "^4.10.0",
     "fs-extra": "^0.12.0",
     "mv": "0.0.5",
@@ -21,5 +12,13 @@
     "rimraf": "^2.2.8",
     "string": "^1.3.0",
     "xmlbuilder": "0.4.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/raphaelluchini/samsungstv-packager.git"
+  },
+  "bugs": {
+    "url": "https://github.com/raphaelluchini/samsungstv-packager/issues"
+  },
+  "engine": "node >= 0.8.0"
 }
